--- a/nexdefend-frontend/src/components/Home.module.css
+++ b/nexdefend-frontend/src/components/Home.module.css
@@ -2,7 +2,7 @@
   position: relative;
   text-align: center;
   padding: 40px;
-  background: linear-gradient(to right, #bbff00, #00c6ff);
+  background: linear-gradient(to right, #6a15da, #00c6ff);
   color: white;
   min-height: 100vh;
   font-family: 'Arial', sans-serif;
